--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Scott Wilson <scott@propersquid.com>"]
 edition = "2018"
 license = "BSD-3-Clause"
 description = "Rust bindings for OpenSubdiv (placeholder)"
-keywords = ["vfx", "animation", "cg", "opensubdiv", "subdivision surface"]
+keywords = ["vfx", "animation", "cg", "opensubdiv", "subdivision-surface"]
 categories = ["api-bindings"]
 homepage = "https://www.github.com/scott-wilson/OpenSubdiv-rs"
 documentation = "https://docs.rs/OpenSubdiv"
